<resources>
    <string name="app_name">TodoList</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Einloggen</string>
    <string name="error_invalid_email">Es muss eine Email Adresse angegeben werden!</string>
    <string name="error_invalid_password">Es muss ein Password aus 6 Zahlen angegeben werden!</string>
    <string name="error_login_failed">Die Anmeldedaten sind nicht korrekt!</string>
    <string name="title_activity_login">TodoList</string>

    <string name="todo_detail_name_label">Name</string>
    <string name="todo_detail_name_hint">Todo</string>
    <string name="todo_detail_description_label">Beschreibung</string>
    <string name="todo_detail_description_hint">Beschreibung des Todos</string>
    <string name="todo_detail_due_date_label">Fällig am</string>
    <string name="todo_detail_due_date_hint">Fälligkeitsdatum</string>
    <string name="todo_detail_done_label">Todo Erledigt?  </string>
    <string name="todo_detail_favourite_label">Favorit?  </string>
    <string name="todo_detail_contacts_label">Kontakte</string>

    <string name="todo_list_item_default_name">Todo Item Name</string>
    <string name="todo_list_item_default_due_date">Fälligkeitsdatum</string>

    <string name="todo_details_context_menu_sendSMS_title">SMS senden</string>
    <string name="todo_details_context_menu_sendMail_title">Email senden</string>
    <string name="todo_details_context_menu_removeContact_title">Kontakt entfernen</string>

    <string name="todo_details_options_menu_addContact_title">Add Contact</string>
    <string name="todo_details_options_menu_saveTodo_title">Save Todo</string>
    <string name="todo_details_options_menu_deleteTodo_title">Delete Todo</string>

    <string name="todo_overview_options_menu_addTodo_title">Add Todo</string>
    <string name="todo_overview_options_menu_favouriteSorting_title">Sort By Favourite</string>
    <string name="todo_overview_options_menu_dateSorting_title">Sort By Date</string>

    <string name="login_activity_connection_check_title">Verbindung wird geprüft</string>
    <string name="login_activity_connection_check_message">Bitte warten während die Verbindung zum Webserver geprüft wird.</string>
    <string name="login_activity_no_connection_title">Keine Verbindung vorhanden</string>
    <string name="login_activity_no_connection_message">Es ist keine Verbindung zum Webserver vorhanden. Alle Daten werden nur lokal gespeichert!</string>
    <string name="login_activity_check_login_title">Bitten warten Sie...</string>
    <string name="login_activity_check_login_message">Nutzerdaten werden evaluiert.</string>

    <string name="todo_overview_on_back">"Nochmaliges Drücken beendet die App!"</string>

    <string name="todo_detail_delete_alert_title">Todo löschen</string>
    <string name="todo_detail_delete_alert_message">Soll das Todo wirklich gelöscht werden?</string>
    <string name="todo_detail_delete_alert_delete_button">Löschen</string>
    <string name="todo_detail_delete_alert_cancel_button">Abbrechen</string>
    <string name="todo_detail_mail_intent_chooser_title">Email senden</string>
    <string name="todo_detail_changed_alert_title">Todo geändert</string>
    <string name="todo_detail_changed_alert_message">Das Todo wurde geändert. Wie soll mit den Änderungen verfahren werden?</string>
    <string name="todo_detail_changed_alert_save_button">Speichern</string>
    <string name="todo_detail_changed_alert_cancel_button">Abbrechen</string>
    <string name="todo_detail_changed_alert_discard_button">Verwerfen</string>



</resources>
