<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="todolist.mad.vfh.kfrank.de.todolist.activities.TodoDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_detail_name_label"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/todo_detail_name_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_detail_description_label"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:hint="@string/todo_detail_description_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_detail_due_date_label"/>

        <EditText
            android:id="@+id/dueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/todo_detail_due_date_hint"
            android:focusable="false"
            android:enabled="true"
            android:drawableLeft="@drawable/calendar_icon"/>

        <Switch
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_detail_done_label"
            android:textSize="@dimen/todo_detail_text_size"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:paddingTop="@dimen/todo_detail_padding"
            android:paddingBottom="@dimen/todo_detail_padding"/>

        <!-- TODO durch TextView mit Stern Image ersetzen -->
        <Switch
            android:id="@+id/favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_detail_favourite_label"
            android:textSize="@dimen/todo_detail_text_size"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:paddingTop="@dimen/todo_detail_padding"
            android:paddingBottom="@dimen/todo_detail_padding"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_detail_contacts_label"/>

        <todolist.mad.vfh.kfrank.de.todolist.util.ContactListView
            android:id="@+id/contactList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </todolist.mad.vfh.kfrank.de.todolist.util.ContactListView>

    </LinearLayout>


</ScrollView>
