<menu   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:todolist="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addContact"
        android:orderInCategory="1"
        todolist:showAsAction="always"
        android:icon="@drawable/add_person_icon"
        android:title="@string/todo_details_options_menu_addContact_title" />

    <item
        android:id="@+id/saveTodo"
        android:orderInCategory="2"
        todolist:showAsAction="always"
        android:icon="@drawable/save_icon"
        android:title="@string/todo_details_options_menu_saveTodo_title" />

    <item
        android:id="@+id/deleteTodo"
        android:orderInCategory="3"
        todolist:showAsAction="always"
        android:icon="@drawable/delete_icon"
        android:title="@string/todo_details_options_menu_deleteTodo_title" />

</menu>