<menu   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:todolist="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addTodo"
        android:orderInCategory="1"
        todolist:showAsAction="always"
        android:icon="@drawable/plus_icon"
        android:title="@string/todo_overview_options_menu_addTodo_title" />

    <item
        android:id="@+id/favouriteSorting"
        android:orderInCategory="2"
        todolist:showAsAction="always"
        android:icon="@drawable/favourite_icon"
        android:title="@string/todo_overview_options_menu_favouriteSorting_title" />

    <item
        android:id="@+id/dateSorting"
        android:orderInCategory="3"
        todolist:showAsAction="always"
        android:icon="@drawable/calendar_icon"
        android:title="@string/todo_overview_options_menu_dateSorting_title" />

</menu>